fixed image, post title and wrapping text

--- a/styles/styles-shared.css
+++ b/styles/styles-shared.css
@@ -691,6 +691,7 @@ body {
     padding: 5px;
     font-weight: bold;
     line-height: 1.3em;
+    word-break: break-word;
 }
 
 .mentor-details .details-row {
